force-app/main/default/objects/Testimonial__c.object
<CustomObject>
    <description>An object connected to the Parents/Companies/Staff object allowing schools to conveniently record testimonials</description>
    <fields>
        <fullName>About_Author_English__c</fullName>
        <label>About Author (English)</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>About_Author__c</fullName>
        <inlineHelpText>A field to populate a short description of the testimonial&apos;s author, something like &quot;English Teacher since 2009&quot; or &quot;Working mum of two&quot; - should always be in English on the English Parent record, even if the Testimonial Text is in another language.</inlineHelpText>
        <label>About Author</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Translator__c</fullName>
        <inlineHelpText>Assigning a translator for this testimonial will give them the ability to edit the relevant details of this record.</inlineHelpText>
        <label>Assigned Translator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laura González (Spanish 1)</fullName>
                </value>
                <value>
                    <fullName>Emma Watkins (Spanish 2)</fullName>
                </value>
                <value>
                    <fullName>Alexandra Mostaza (Spanish 3)</fullName>
                </value>
                <value>
                    <fullName>Sonia Fernandez (Spanish 4)</fullName>
                </value>
                <value>
                    <fullName>Nayua Abdelkefi (Spanish 5)</fullName>
                </value>
                <value>
                    <fullName>Tania Ramos (Portuguese 1)</fullName>
                </value>
                <value>
                    <fullName>TBD (Portuguese 2)</fullName>
                </value>
                <value>
                    <fullName>External Translator TBD (Portuguese 3)</fullName>
                </value>
                <value>
                    <fullName>Elena Savtsova (Russian 1)</fullName>
                </value>
                <value>
                    <fullName>TBD (Russian 2)</fullName>
                </value>
                <value>
                    <fullName>External Translator TBD (Russian 3)</fullName>
                </value>
                <value>
                    <fullName>Test Translator (Spanish, Portuguese, Russian)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Translator_for_Sharing_Rule__c</fullName>
        <label>Assigned Translator for Sharing Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Can_be_publicly_shared__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked if the person submitting the testimonial is content for the school to use the testimonial for marketing or similar purposes e.g. show it on the website</inlineHelpText>
        <label>Can be publicly shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Required to correctly show the type (class) of record on the group website</description>
        <formula>IF(Related_to__r.RecordType.Name = &quot;Additional Parent&quot;, &quot;Parent&quot;, Related_to__r.Person_Record_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Photo_Available_Text__c</fullName>
        <formula>IF( Parent_photo_available__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Photo Available? (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyTestimonialId__c</fullName>
        <label>CopyTestimonialId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>TEXT(School_Text__c) != School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at the parent (english) version of this record</description>
        <label>English Parent</label>
        <referenceTo>Testimonial__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translated_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <description>Populated via a field update on the approval process, defines the email address of the first approver for this record</description>
        <label>First Approver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Front_Page_Group_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if you want this Testimonial to show on the home page and in the sidebar blocks of any school website that it&apos;s published on (assuming it&apos;s one of the 6 most recently created). May also appear on the home page of the group website.</inlineHelpText>
        <label>Show on Homepage &amp; in Sidebar Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Populated from a field update in the first step of the approval process</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language switch for website translation management.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newly_Created__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to trigger processes to keep translation records in sync with English and to handle correct population of rich text fields</description>
        <label>Newly Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_1_Translation_Per_Language_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UID for translated records. Populated via a workflow rule, ensures a unique combination of English_Parent.Id and Language__c to prevent more than one translation per language. Field names in this way to make error message more understandable.</description>
        <label>Only 1 Translation Per Language Allowed!</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_photo_available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is ticked manually by group marketing if the photo is the type that will look good on the website e.g. an actual picture of the parent or staff member. Ticking this box boosts the testimonial in the website ordering.</inlineHelpText>
        <label>Good photo provided for publishing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Group_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>20/12/2017: Not used for new website. Pending delete once removed from views etc.</description>
        <inlineHelpText>Check if you want this record to be shown on the Group Website</inlineHelpText>
        <label>Publish on Group Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want this record to be shown on the School Website</inlineHelpText>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q1_Answer__c</fullName>
        <description>Job was challenging</description>
        <label>Q1. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9900</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2_Answer__c</fullName>
        <description>There were sufficient opportunities for advancement</description>
        <label>Q2. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9966</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q3_Answer__c</fullName>
        <description>Workload was manageable</description>
        <label>Q3. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9900</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_Staff__c</fullName>
        <label>Reason for Leaving (Staff)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract end</fullName>
                </value>
                <value>
                    <fullName>Personal reasons</fullName>
                </value>
                <value>
                    <fullName>Seeking changes</fullName>
                </value>
                <value>
                    <fullName>Career development</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction with management</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction with location</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction with salary package</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction with school policies</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction with promotion opp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related to</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact does not exist or is not a parent or staff member</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Additional Parent Email, Student Academic File</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Testimonials</relationshipLabel>
        <relationshipName>Testimonials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field.</description>
        <formula>IF(OR(ISNULL(School_Override_Field__c), INCLUDES( School_Override_Field__c, &quot;No override&quot;)), Related_to__r.SchoolText__c, 
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;nanjing1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;marbella1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;navarra1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;tashkent1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;São Paulo&quot; ), &quot;saopaulo1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;kualalumpur1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;moscow1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;manila1;&quot;,null ) &amp;  
IF ( INCLUDES ( School_Override_Field__c , &quot;Yangon&quot; ), &quot;yangon1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Brasilia&quot; ), &quot;brasilia1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;newyork1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;The British Schools Foundation;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 1&quot; ), &quot;Sandbox 1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 2&quot; ), &quot;Sandbox 2;&quot;,null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Count__c</fullName>
        <formula>IF(INCLUDES(School_Override_Field__c, &quot;No Override&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;New York&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Indicates the schools on which the testimonial should be published. By default or if blank this is set to the same school as the &apos;Related to&apos; contact belongs to. NB. If used ensure you select ALL schools for which the testimonial needs to show.</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
                <value>
                    <fullName>Sandbox 1</fullName>
                </value>
                <value>
                    <fullName>Sandbox 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Text__c</fullName>
        <description>A text copy of the school__c field for use as a criteria in sharing rules</description>
        <label>School Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British School of Guangzhou</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   English_Parent__r.Related_to__r.SchoolText__c,
   Related_to__r.SchoolText__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <formula>IF( 
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;), 
   English_Parent__r.School_List__c, 
   School_List__c 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   VALUE(
         IF(English_Parent__r.Front_Page_Group_Website__c = TRUE, &quot;2&quot;, &quot;1&quot;) &amp;
         IF(English_Parent__r.Parent_photo_available__c = TRUE, &quot;2&quot;, &quot;1&quot;) &amp;
         CASE(TEXT(English_Parent__r.Testimonial_Rating__c), &quot;Excellent (Must Include Picture)&quot;, &quot;2&quot;, &quot;Average (Must Include Picture)&quot;, &quot;1&quot;, &quot;0&quot;) &amp;
         LEFT(TEXT(English_Parent__r.CreatedDate), 4) &amp; 
         LEFT(RIGHT(TEXT(English_Parent__r.CreatedDate), 15), 2) &amp; 
         LEFT(RIGHT(TEXT(English_Parent__r.CreatedDate), 12), 2)
         ),
   VALUE( 
         IF(Front_Page_Group_Website__c = TRUE, &quot;2&quot;, &quot;1&quot;) &amp;
         IF(Parent_photo_available__c = TRUE, &quot;2&quot;, &quot;1&quot;) &amp;
         CASE(TEXT(Testimonial_Rating__c), &quot;Excellent (Must Include Picture)&quot;, &quot;2&quot;, &quot;Average (Must Include Picture)&quot;, &quot;1&quot;, &quot;0&quot;) &amp;
         LEFT(TEXT(CreatedDate), 4) &amp; 
         LEFT(RIGHT(TEXT(CreatedDate), 15), 2) &amp; 
         LEFT(RIGHT(TEXT(CreatedDate), 12), 2)
         )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Language_Parent_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to copy the initial testimonial text to the translated record when it&apos;s created and at the same time mark the English Parent record with &apos;TRANSLATION REQUIRED&apos;</inlineHelpText>
        <label>Target Language = Parent Language?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testimonial_Rating__c</fullName>
        <inlineHelpText>Rate the testimonial based on it&apos;s suitability for publishing on the school or group website. An &apos;Excellent&apos; testimonial will include a positive comment and a good photograph that includes both the parent(s) and child(ren).</inlineHelpText>
        <label>Testimonial Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Rated</fullName>
                    <default>true</default>
                    <label>Not Yet Rated</label>
                </value>
                <value>
                    <fullName>Not Suitable for Publishing</fullName>
                </value>
                <value>
                    <fullName>Average (Must Include Picture)</fullName>
                </value>
                <value>
                    <fullName>Excellent (Must Include Picture)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testimonial_Text_English__c</fullName>
        <label>Testimonial Text (English)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Testimonial_Text__c</fullName>
        <description>A text box for the main body of the testimonial text</description>
        <inlineHelpText>Please enter the testimonial here but do not include any images in rich text field directly. Any images should be added as attachments.</inlineHelpText>
        <label>Testimonial Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_Related_To__c</fullName>
        <description>Required by Drupal to correctly import the record to the site</description>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   IF(
      LEN(English_Parent__r.Related_to__r.FirstName &amp;&quot; &quot;&amp; 
      English_Parent__r.Related_to__r.LastName) &lt;= 20,
      English_Parent__r.Related_to__r.FirstName &amp;&quot; &quot;&amp; 
      English_Parent__r.Related_to__r.LastName, 
      IF(
         LEN(TEXT(English_Parent__r.Related_to__r.Salutation) &amp;&quot; &quot;&amp; 
         English_Parent__r.Related_to__r.LastName) &lt;= 20,
         TEXT(English_Parent__r.Related_to__r.Salutation) &amp;&quot; &quot;&amp; 
         English_Parent__r.Related_to__r.LastName, 
      
/*START of else when translated testimonial ((FirstName OR Sal.) &amp; LastName)) &gt; 20 chars*/

         LEFT(
              IF(
                 FIND(&quot; &quot;, English_Parent__r.Related_to__r.FirstName) &gt; 0,    
                 LEFT(English_Parent__r.Related_to__r.FirstName, 
                 FIND(&quot; &quot;, English_Parent__r.Related_to__r.FirstName)-1),  
                 English_Parent__r.Related_to__r.FirstName
                 ) 
              &amp; &quot; &quot; &amp; 
              IF(
                 FIND(
                 &quot; &quot;, English_Parent__r.Related_to__r.LastName) &gt; 0, 
                 MID(
                     English_Parent__r.Related_to__r.LastName, 
                     FIND(&quot; &quot;, English_Parent__r.Related_to__r.LastName)+1,   
                     LEN(English_Parent__r.Related_to__r.LastName)-
                     FIND(&quot; &quot;, English_Parent__r.Related_to__r.LastName)+1
                     ),
                 English_Parent__r.Related_to__r.LastName
                 ), 
              20
              )
         )
      ),

/*END of else when translated testimonial ((FirstName OR Sal.) &amp; LastName)) &gt; 20 chars*/

/*START of else when record type != translated testimonial */

   IF(
      LEN(Related_to__r.FirstName &amp;&quot; &quot;&amp; Related_to__r.LastName) &lt;= 20,   
      Related_to__r.FirstName &amp;&quot; &quot;&amp; Related_to__r.LastName, 
      IF(
         LEN(TEXT(Related_to__r.Salutation) &amp;&quot; &quot;&amp; Related_to__r.LastName) &lt;= 20,
         TEXT(Related_to__r.Salutation) &amp;&quot; &quot;&amp; Related_to__r.LastName, 
         LEFT(
              IF(
                 FIND(&quot; &quot;, Related_to__r.FirstName) &gt; 0, 
                 LEFT(Related_to__r.FirstName, FIND(&quot; &quot;, Related_to__r.FirstName)-1), 
                 Related_to__r.FirstName
                 ) 
              &amp; &quot; &quot; &amp; 
              IF(
                 FIND(&quot; &quot;, Related_to__r.LastName) &gt; 0, 
                 MID(Related_to__r.LastName, FIND(&quot; &quot;, Related_to__r.LastName)+1, 
                 LEN(Related_to__r.LastName)-FIND(&quot; &quot;, Related_to__r.LastName)+1), 
                 Related_to__r.LastName
                 ), 
              20
              )
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 1 TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_2_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 2 TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_3_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 3 TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>webId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>webId</label>
        <type>Text</type>
    </fields>
</CustomObject>